# Duckiebot_IsaacSim

./: .gitignore  README.md  duckiebot_final_robotfix.usd
src/duckie_chase/: package.xml  setup.cfg  setup.py
src/duckie_chase/duckie_chase/: detection_node.py  detection_node_backup.py
src/duckie_control/: CMakeLists.txt  package.xml
src/duckie_control/scripts/: keyboard_low_level.py  motor_driver.py
src/duckie_led/: CMakeLists.txt  package.xml
src/duckie_led/scripts/: led_server.py
src/duckie_low_level/: CMakeLists.txt  package.xml
src/duckie_low_level/scripts/: raw_wheel_operator.py
src/duckie_smart/: package.xml  setup.cfg  setup.py
src/duckie_smart/duckie_smart/: circle_driver.py  smart_driver.py
src/duckie_vision/: package.xml  setup.cfg  setup.py
src/duckie_vision/duckie_vision/: image_compressor.py  simple_viewer.py
